2024-05-10T16:11:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9034989461 # 260
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-10
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 789 1256 / 796 1264
* notice: next accum: outdated-unq outdated-all / unq all: 789 1256 / 797 1265
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-05-10]

2024-05-10T08:11:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9029298229 # 259
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-10
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 789 1256 / 795 1263
* notice: next accum: outdated-unq outdated-all / unq all: 789 1256 / 796 1264
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-10]

2024-05-09T16:10:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9020145888 # 257
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 789 1256 / 794 1262
* notice: next accum: outdated-unq outdated-all / unq all: 789 1256 / 795 1263
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-05-09]

2024-05-09T08:11:47Z: