@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-10T16:11:02Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-05-11T00:38:37Z",
+  "count" : 3,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -0, +3 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
