@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-10T16:11:02Z",
+  "timestamp" : "2024-05-11T00:38:37Z",
   "count_outdated" : 1256,
   "uniques_outdated" : 789,
-  "count" : 1265,
-  "uniques" : 797,
+  "count" : 1266,
+  "uniques" : 798,
   "clones" : [
     {
       "timestamp": "2024-04-28T00:00:00Z",
@@ -43,12 +43,12 @@
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
